--- a/master-card-test.fsproj
+++ b/master-card-test.fsproj
@@ -13,7 +13,12 @@
   <ItemGroup>
     <PackageReference Include="Fable.Browser.Dom" Version="2.14.0" />
     <PackageReference Include="Fable.Core" Version="4.1.0" />
+    <PackageReference Include="Fable.Promise" Version="3.2.0" />
+    <PackageReference Include="Fable.React" Version="9.3.0" />
     <PackageReference Include="Feliz" Version="2.6.0" />
+    <PackageReference Include="Feliz.UseDeferred" Version="2.0.0" />
+    <PackageReference Include="Thoth.Fetch" Version="3.0.1" />
+    <PackageReference Include="Thoth.Json" Version="10.2.0" />
   </ItemGroup>
 
 </Project>
