--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "sass": "^1.69.0",
     "vite": "^4.4.9"
   },
   "dependencies": {
